name:                  huck
version:               0.0.1
license:               BSD3
license-file:          LICENSE
author:                Tim McGilchrist <timmcgil@gmail.com>
maintainer:            Tim McGilchrist <timmcgil@gmail.com>
copyright:             (c) 2017 Tim McGilchrist 
synopsis:              huck
category:              System
cabal-version:         >= 1.8
build-type:            Simple
homepage:              https://github.com/tmcgilchrist/huck
description:
            A Haskell TOML parsing library.

            'Cause just like in the classic mis-adventure, Tom doesn't really pull his weight.
            So Huck is gathering all the toml parsers and making them betterer.

source-repository head
  type: git
  location: git://github.com/tmcgilchrist/huck.git

library
  build-depends:
                      base                            >= 3          && < 5
                    , containers                      >= 0.4        && < 0.6
                    , ghc-prim                        == 0.5.*
                    , text                            == 1.2.*
                    , time                            >= 1.7        && < 1.9
                    , megaparsec                      == 5.0.*
                    , scientific                      == 0.3.*
                    , unordered-containers            == 0.2.*
                    , vector                          >= 0.10       && < 0.13

  ghc-options:
                    -Wall

  hs-source-dirs:
                    src

  exposed-modules:
                    Huck
                    Huck.Data
                    Huck.Data.Token
                    Huck.Position
                    Huck.Prelude                    
                    Huck.Lexer
                    Huck.Parser
test-suite test
  type:
                    exitcode-stdio-1.0

  main-is:
                    test.hs

  ghc-options:
                    -Wall -threaded -O2

  hs-source-dirs:
                    test

  build-depends:
                      base                            >= 3          && < 5
                    , unordered-containers            == 0.2.*
                    , megaparsec
                    , text
                    , hedgehog                        >= 0.5        && < 0.6
                    , huck
                    , time             


test-suite test-io
  type:
                    exitcode-stdio-1.0

  main-is:
                    test-io.hs

  ghc-options:
                    -Wall -threaded -O2

  hs-source-dirs:
                    test

  build-depends:
                      base                            >= 3          && < 5
                    , megaparsec
                    , resourcet                       == 1.*
                    , text
                    , hedgehog                        >= 0.5        && < 0.6
                    , huck
